# querymodelling

./: .gitignore  HISTORY.md  pyproject.toml
.github/workflows/: run-publish.yml  run-tests.yml
docs/: conf.py  index.rst
docs/user/: install.rst
querymodelling/: __version__.py  base.py  sql.py
